infrastructure/agent-vault/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: agent-vault
spec:
  endpointSelector: {}
  ingress: []
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: agent-vault
  namespace: agent-vault
spec:
  endpointSelector:
    matchLabels:
      app: agent-vault
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: '14321'
        protocol: TCP
      - port: '14322'
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        cnpg.io/cluster: agent-vault-pg
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: agent-vault-pg
  namespace: agent-vault
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: agent-vault-pg
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: agent-vault
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cnpg-system
        k8s:app.kubernetes.io/name: cloudnative-pg
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
      - port: '5432'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        cnpg.io/cluster: agent-vault-pg
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
      - port: '8000'
        protocol: TCP
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: '9187'
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      - port: '6443'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        cnpg.io/cluster: agent-vault-pg
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
      - port: '8000'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restore-test
  namespace: agent-vault
spec:
  endpointSelector:
    matchLabels:
      app: agent-vault-pg-restore-test
  ingress: []
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
